--- a/css/style.css
+++ b/css/style.css
@@ -37,11 +37,14 @@ body{
 #movieblock{
     position: relative;
     overflow: hidden;
+    cursor: pointer;
+
 
 }
 #movieblock:hover .movieDescription {
     display: block;
-    transition: all 1s ease-in-out;
+    transition: all 0.25s ease-in-out;
+    bottom: 0;
 }
 
 #movieblock img{
@@ -75,8 +78,8 @@ body{
     background-color: white;
     padding: 30px 15px;
     position:absolute;
-    bottom: 0;
-    display: none;
+    bottom: -100%;
+    
 
 
 }
